# bitrot

./: .gitignore  README.md  TESTS.md  TEST_OUTLINE.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: draft-release.yml
codex-target/: .rustc_info.json
scripts/: make-portable.mjs  setup-ffmpeg.mjs
src/: App.tsx  main.tsx  styles.scss  theme.scss  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: ffmpeg-x86_64-unknown-linux-gnu  ffprobe-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: datamosh.rs  ffmpeg.rs  ffmpeg_jobs.rs  ffprobe_frames.rs  lib.rs  main.rs  pixelsort.rs
src-tauri/src/ffmpeg/: jobs.rs  mod.rs
src-tauri/src/modes/: block_shift.rs  byte_range.rs  datamosh.rs  kaleidoscope.rs  mod.rs  vaporwave.rs
src-tauri/src/modes/byte_range/: jobs.rs  math.rs  pipeline.rs  preview.rs
src-tauri/src/modes/pixelsort/: algo.rs  jobs.rs  mod.rs  preview.rs  workspace.rs
src-tauri/src/native/: mod.rs  pipeline.rs  preview.rs
src/analysis/: frameMap.ts  probeFrameMap.ts
src/components/: AboutModalContent.tsx  DropZone.tsx  FfmpegGate.tsx  Landing.tsx
src/config/: app.ts
src/domain/: video.ts
src/editor/: Editor.tsx  EditorInfoSection.tsx  EditorProcessingCard.tsx  ExportModal.tsx  ModeCard.tsx  ModeConfigEditor.tsx  ModeSelectModal.tsx  ReceiptModal.tsx  VideoPreview.tsx  useEditorTopRowHeight.ts  useExportSettingsState.ts  useFrameMap.ts  useFramePreview.ts  useJobStatus.ts  (+3 more)
(+139 files in other folders)
