[package]
name = "bitrot"
version = "1.0.1"
description = "Tauri + React app"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
